--- a/frontendSIGUI/src/app/app.component.html
+++ b/frontendSIGUI/src/app/app.component.html
@@ -21,14 +21,18 @@
       </ul>
   </div>  
 </div>
-<div class="content"> 
-  <div class="content_body"> 
+<div id='div_Content_Primary' class="content"> 
+  <div id='div_Content_Register' class="content_body"> 
     <div class="inner_elements">
       <img [src]="imgCorLogo" class="logo_content" width="300" height="95">
       <h5 class="text_content"> Sistema de Informações Geograficas Urbanas de Infraestrutura</h5>
     </div>
   </div>
 </div>
+<div class="content">
+  <app-open-layer></app-open-layer>
+</div>
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
