--- a/frontendSIGUI/src/styles.css
+++ b/frontendSIGUI/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 /* Application-wide Styles */
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 *{
     margin: 0;
@@ -7,27 +8,34 @@
     list-style: none;
     text-decoration: none;
     color: aliceblue;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Roboto';
 }
 body{
     background-color:aliceblue;
 }
+
 .content{
     width: 100%;
-    height: 600px;
     display: block;
     margin: 0 auto;
+    overflow: auto;
+}
+
+#div_Content_Primary{
+    height: 600px;
     border-radius: 0 0 8% 0;
     background-color: #030f2d;
-    overflow: auto;
+}
+
+#div_Content_Register{
+    height: 500px;
+    background-color: #010a22;
 }
 
 .content_body{
     margin: 0 auto;
     margin-top: 50px;
     width: 100%;
-    height: 500px;
-    background-color: #010a22;
     position: relative;
 }
 .inner_elements{
@@ -36,6 +44,20 @@ body{
     display: block;
     margin: 0 auto;
         /* background-color: red; */
+}
+.inner_elements_body{
+    width: 1000px;
+    display: block;
+    margin: 0 auto;
+        /* background-color: red; */
+}
+.inner_elements_body h2{
+    color: black;
+    margin-bottom: 10px;
+
+}
+.inner_elements_body p{
+    color: black;
 }
 
 .header{
