--- a/frontendSIGUI/src/app/Components/open-layer/open-layer.component.css
+++ b/frontendSIGUI/src/app/Components/open-layer/open-layer.component.css
@@ -5,8 +5,14 @@
 }
 .map-container {
 
-    width: 100%;
+    /*width: 100%;
     height: 400px;
-    display: block;
-    /* flex-grow: 1; */
+    display: block;*/
+    flex-grow: 1; 
+}
+footer{
+    display: flex;
+    background-color: wheat;
+    padding: 1em;
+    justify-content: space-between;
 }
