--- a/frontendSIGUI/src/app/app.component.html
+++ b/frontendSIGUI/src/app/app.component.html
@@ -1,44 +1,11 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-<style>
-
-</style>
-<div class="header">
-  <div class="inner_elements">
-      <div class="logo_container">
-        <img [src]="imgLogo" class="logo" width="128" height="40">
-      </div>
-      <ul class="navigation">
-        <a><li>Cadastro</li></a>        
-        <a><li>LOGIN</li></a>
-      </ul>
-  </div>  
-</div>
-<div id='div_Content_Primary' class="content"> 
-  <div id='div_Content_Register' class="content_body"> 
-    <div class="inner_elements">
-      <img [src]="imgCorLogo" class="logo_content" width="300" height="95">
-      <h5 class="text_content"> Sistema de Informações Geograficas Urbanas de Infraestrutura</h5>
-    </div>
-  </div>
+<div>
+  <app-top-header></app-top-header>
 </div>
 <div class="content">
-  <app-open-layer></app-open-layer>
+  <nav>
+  <a class="button" routerLink="/map-view">MapView</a>
+  </nav>
+  <router-outlet></router-outlet>
 </div>
 
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<router-outlet></router-outlet>
