--- a/frontendSIGUI/src/app/components/maps-components/open-layer/open-layer.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/open-layer/open-layer.component.html
@@ -2,6 +2,9 @@
     <div class="inner_elements_body"> 
         <h2>MAPEAMENTO</h2>
         <p>open-layer works!</p>
+        <app-control-map [map]="map" (DrawMap)="interactionMapChange($event)"
+        (UndoMap)="removeMapPoint()" ></app-control-map>
+        <mat-slider min="1" max="100" step="1" value="50"></mat-slider>
     </div>
 </div>
 <div class="map-container">     
