Adicionando Iterações de Mapa

--- a/frontendSIGUI/src/app/components/maps-components/forms-map/forms-map.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/forms-map/forms-map.component.html
@@ -8,3 +8,7 @@
         <label for="pointMap">Marcar Ponto no Mapa</label>
         <button id="btn_pointMap" (click)="pointMap()">Marcador</button>
     </div>
+    <div>
+        <label for="btn_searchPointMap">Buscar Ponto no Banco</label>
+        <button id="btn_searchPointMap" (click)="searchPointMap()">Search</button>
+    </div>
