--- a/frontendSIGUI/src/app/components/maps-components/forms-map/forms-map.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/forms-map/forms-map.component.html
@@ -5,6 +5,13 @@
     </div> -->
 <!-- </form> -->
     <div>
+        <h3> ADICIONAR INFRAESTRUTURA </h3>
+    </div>
+    <div>
+        <label for="input_nameInfra">Identificador da Infraestrutura </label>
+        <input type="text" id="input_nameInfra" name="input_nameInfra" formControlName="firstName">
+    </div>
+    <div>
         <label for="pointMap">Marcar Ponto no Mapa</label>
         <button id="btn_pointMap" (click)="pointMap()">Marcador</button>
     </div>
