--- a/frontendSIGUI/src/app/components/angular-components/navheadersigui/navheadersigui.component.css
+++ b/frontendSIGUI/src/app/components/angular-components/navheadersigui/navheadersigui.component.css
@@ -1,7 +1,8 @@
+
 .logo{
-    margin-top: 20px;
-    max-width: 100%;
-    max-height: 100%;
+    margin-top: 30px;
+    margin-left: 50px;
+    margin-bottom: 30px;
 }
 .logo_content{
     margin-top: 160px;
