--- a/frontendSIGUI/src/app/components/maps-components/open-layer/open-layer.component.css
+++ b/frontendSIGUI/src/app/components/maps-components/open-layer/open-layer.component.css
@@ -13,9 +13,10 @@
 }
 .map-container-area{
     width: 100%;
+    margin-top: 10px;
     height: auto;
     overflow: hidden;
-    background-color: #010a22;
+    background-color: #010a22;    
 }
 footer{
     display: flex;
