--- a/frontendSIGUI/src/styles.scss
+++ b/frontendSIGUI/src/styles.scss
@@ -1,5 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
-/* Application-wide Styles */
+@import '../node_modules/@angular/material/theming';
+@include mat-core();
+
+$custom-app-primary: mat-palette($mat-indigo,900,900,900);
+$custom-app-secondary: mat-palette($mat-indigo, A200, A400, 700);
+$custom-app-warn: mat-palette($mat-red);
+
+$custom-theme: mat-light-theme($custom-app-primary,$custom-app-secondary,$custom-app-warn);
+
+@include angular-material-theme($custom-theme);
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 *{
     margin: 0;
@@ -64,10 +76,24 @@ button:active {
 
 .content_body{
     margin: 0 auto;
-    margin-top: 50px;
+    //margin-top: 50px;
     width: 100%;
     height: auto;
     position: relative;
+}
+.inner-elements-header{
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    background-color: #1d46b8;    
+}
+.inner-elements-header .inner_elements_body h2{
+    margin-top: 10px;
+    color: aliceblue;
+}
+.inner-elements-header .inner_elements_body p{
+    margin-left: 10px;
+    color: aliceblue;
 }
 .inner_elements{
     width: 1000px;
@@ -98,17 +124,7 @@ button:active {
     display: block;
     background-color: #010a22;
 }
-.logo{
-    margin-top: 20px;
-    max-width: 100%;
-    max-height: 100%;
-}
-.logo_content{
-    margin-top: 160px;
-    max-width: 100%;
-    max-height: 100%;
-    margin-left: 10%;
-}
+
 .text_content{
     margin-top: 15px;
     max-width: 100%;
@@ -163,5 +179,4 @@ button:active {
 
 
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
