--- a/frontendSIGUI/src/styles.scss
+++ b/frontendSIGUI/src/styles.scss
@@ -25,6 +25,10 @@ body{
     background-color:aliceblue;
 }
 
+.white-icon{
+    color: white;
+}
+
 input{
     background-color: rgb(206, 209, 212);
     color: black;
