--- a/frontendSIGUI/src/app/components/maps-components/open-layer/open-layer.component.css
+++ b/frontendSIGUI/src/app/components/maps-components/open-layer/open-layer.component.css
@@ -5,7 +5,7 @@
 }
 .map-container {
 
-    width: 1000px;
+    width: 100%;
     height: 400px;
     display: block;
     margin: 0 auto;
@@ -14,9 +14,23 @@
 .map-container-area{
     width: 100%;
     margin-top: 10px;
-    height: auto;
+    height: 500px;
     overflow: hidden;
     background-color: #010a22;    
+}
+.map-container-area label{
+    color: azure;
+}   
+
+.inner-elements-map-container{
+    width: 100%;
+    height: 60px;
+    display: block;
+    margin-left: 20px;
+}
+
+.scaline{
+    position: relative
 }
 footer{
     display: flex;
