--- a/frontendSIGUI/src/styles.scss
+++ b/frontendSIGUI/src/styles.scss
@@ -2,12 +2,20 @@
 @include mat-core();
 
 $custom-app-primary: mat-palette($mat-indigo,900,900,900);
-$custom-app-secondary: mat-palette($mat-indigo, A200, A400, 700);
+$custom-app-secondary: mat-palette($mat-gray,50);
 $custom-app-warn: mat-palette($mat-red);
 
 $custom-theme: mat-light-theme($custom-app-primary,$custom-app-secondary,$custom-app-warn);
 
 @include angular-material-theme($custom-theme);
+
+// $custom-typography: mat-typography-config(
+//     $font-family: 'Ralaway'
+// );
+
+// @include angular-material-typography($custom-typography);
+
+
 
 
 html, body { height: 100%; }
