Gerenciamento de Municipio

--- a/frontendSIGUI/src/app/components/maps-components/map-iterations/map-iterations.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/map-iterations/map-iterations.component.html
@@ -13,7 +13,7 @@
         </div>
         <div>
             <label for="btn_AdicionarRede">Associar</label>
-            <button id='btn_AdicionarRede' mat-flat-button color="primary" (click)="enableDivInfra()"> Rede </button>
+            <button id='btn_AdicionarRede' mat-flat-button color="primary" (click)="enableDivMunicipio()"> Municipio </button>
         </div>        
     </div>   
 </div>   
